--- a/Style/style.css
+++ b/Style/style.css
@@ -8,3 +8,51 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* Share Style  */
+
+.display-flex{
+  display: flex;
+}
+
+.text-gray{
+  color: #424242;
+}
+.text-ligt-gray{
+  color: #727272;
+}
+
+.bg-light{
+  background-color: rgba( 255, 144, 14, 0.1);
+}
+
+/* Header style */
+
+
+/* Navbar related style  */
+
+.navbar{
+  justify-content: space-between;
+
+}
+
+
+.nav-links{
+  
+}
+
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+
+.nav-link{
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.navbar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+
+}
