--- a/Style/style.css
+++ b/Style/style.css
@@ -26,6 +26,16 @@
   background-color: rgba( 255, 144, 14, 0.1);
 }
 
+.btn-primary{
+  background-color: #FF900E;
+  color:white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+}
+
 /* Header style */
 
 
@@ -33,9 +43,13 @@
 
 .navbar{
   justify-content: space-between;
+  align-items: center;
 
 }
-
+.text-logo{
+  font-weight: 700;
+  font-size: 3rem;
+}
 
 .nav-links{
   
@@ -54,5 +68,32 @@
 .navbar, .banner{
   max-width: 1440px;
   margin: 0 auto;
+
+}
+
+/* banner related style  */
+
+.banner-content{
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-tittle{
+  font-size: 4rem;
+  font-weight: 700;
+}
+.banner-img{
+  width: 100%; 
+}
+
+
+/* Responsive media Query  */
+
+@media screen and (max-width: 576px) {
+  
+  .navbar, .nav-links {
+    flex-direction: column;
+  }
 
 }
