--- a/Style/style.css
+++ b/Style/style.css
@@ -36,6 +36,15 @@
   border: none;
 }
 
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+main > section {
+  margin-top: 130px;
+
+}
 /* Header style */
 
 
@@ -84,9 +93,32 @@
 .banner-img{
   width: 100%; 
 }
+/* Team and feature related styles */
+.teams{
+  align-items: center;
+}
+.team-image-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+  
 
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+.ferture-tittle{
+  font-size: 2.8rem;
+  
+}
+#Quick-list{
+  font-weight: 300;
+}
 
 /* Responsive media Query  */
+
 
 @media screen and (max-width: 576px) {
   
