--- a/Style/style.css
+++ b/Style/style.css
@@ -15,6 +15,9 @@
   display: flex;
 }
 
+.text-primary{
+  color: #FF900E;
+}
 .text-gray{
   color: #424242;
 }
@@ -26,6 +29,9 @@
   background-color: rgba( 255, 144, 14, 0.1);
 }
 
+.display-none{
+  display: none;
+}
 .btn-primary{
   background-color: #FF900E;
   color:white;
@@ -45,7 +51,12 @@ main > section {
   margin-top: 130px;
 
 }
+.section-tittle{
+  font-size: 2.0rem;
+  font-weight: 600;
+}
 /* Header style */
+
 
 
 /* Navbar related style  */
@@ -59,8 +70,6 @@ main > section {
   font-weight: 700;
   font-size: 3rem;
 }
-
-
 
 .nav-item{
   list-style: none;
@@ -105,25 +114,45 @@ main > section {
 
 }
 .our-features{
-  margin-left: 130px;
+  margin-left: 20px;
   max-width: 530px;
 }
 
-.ferture-tittle{
-  font-size: 2.8rem;
-  
-}
+
 #Quick-list{
   font-weight: 300;
 }
+
+
+/* Project Section  */
+
+
+
+
 
 /* Responsive media Query  */
 
 
 @media screen and (max-width: 576px) {
   
-  .navbar, .nav-links {
+  .navbar, 
+  .nav-links, 
+  .teams {
     flex-direction: column;
   }
 
+  .team-image-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+}
+
+/* Medium Size Devices */
+@media screen and (min-width:576px)  and (max-width:992px){
+  .teams{
+    flex-direction: column;
+  } 
+  .our-features{
+    margin-left: 30px auto;
+  }
 }
