--- a/Style/style.css
+++ b/Style/style.css
@@ -124,7 +124,36 @@ main > section {
 }
 
 
-/* Project Section  */
+/* Some Fact related Style  */
+
+.fact-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+  font-weight: 500;
+  border: 1px solid #FF900E;
+  border-radius: 8px;
+  width: 240px;
+  height:240px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.fact-description{
+  max-width: 500px;
+}
 
 
 
