--- a/Style/style.css
+++ b/Style/style.css
@@ -122,7 +122,28 @@ main > section {
 #Quick-list{
   font-weight: 300;
 }
+/* Featur section related style  */
+.feature{
+  gap: 140px;
 
+}
+#feature-section-tittle{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.feature-card{
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba( 0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+
+}
+.feature-card .feature-tittle{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
 /* Some Fact related Style  */
 
