--- a/Style/style.css
+++ b/Style/style.css
@@ -144,6 +144,16 @@ main > section {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+#experience-badge{
+  padding: 45px 42px ;
+  font-size: 1.5rem;
+  margin-left: -100px;
+  margin-top: -150px;
+}
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
 
 /* Some Fact related Style  */
 
@@ -192,6 +202,27 @@ main > section {
   filter: grayscale(100%)
 }
 
+.feature-architect > img {
+  width: 100%;
+}
+ /* Footer */
+.footer-section {
+  width: 1440px;
+  height: 100px;
+  background-color: antiquewhite;
+  justify-content: center;
+  align-items: center;
+  margin: 216px 240px ;
+  border-radius: 8px;
+}
+.footer-tittle{
+  text-align: center;
+  padding-top: 39px;
+  
+}
+
+
+
 
 /* Responsive media Query  */
 
@@ -199,7 +230,8 @@ main > section {
 @media screen and (max-width: 576px) {
   
   .navbar, 
-  .nav-links, 
+  .nav-links,
+  .feature, 
   .teams {
     flex-direction: column;
   }
@@ -220,16 +252,32 @@ main > section {
   {
     justify-items: center;
     gap: 50px;
-
+  }
+  #our-feature{
+    margin-left: 20px;
+  }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
   }
 
+  .footer-section{
+    width: 100%;
+    margin: 10px 0px;
+  }
 }
 
 /* Medium Size Devices */
 @media screen and (min-width:576px)  and (max-width:992px){
-  .teams{
+  .teams ,
+  .feature
+  {
     flex-direction: column;
   } 
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
   .our-features{
     margin-left: 30px auto;
     
@@ -238,5 +286,9 @@ main > section {
   .fact-container
   {
     grid-template-columns: repeat(4, 1fr);
+  }
+  .footer-section{
+    width: 100%;
+    margin: 10px 0px;
   }
 }
